feat: DrawCommand 정렬 시스템 도입 및 RenderQueue 개선
- RenderCategory / RenderOrder 기반 렌더 정렬 구조 확립
- DrawCommand에 SortKey 필드 추가
- RenderSortKey 유틸 함수 도입 (Category + Order + Z 반영)
- RendererComponent에 렌더 카테고리 / 순서 개념 추가
- SpriteRendererComponent에서 SortKey 생성 및 제출

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -124,6 +124,7 @@
     <ClInclude Include="Include\Engine\Graphics\PSO\BuiltinPipelineIDs.h" />
     <ClInclude Include="Include\Engine\Graphics\PSO\PipelineID.h" />
     <ClInclude Include="Include\Engine\Graphics\PSO\PipelineStateLibrary.h" />
+    <ClInclude Include="Include\Engine\Graphics\Render\RenderCategory.h" />
     <ClInclude Include="Include\Engine\Graphics\Render\RenderDefaults.h" />
     <ClInclude Include="Include\Engine\Graphics\ConstantBuffer\SpriteConstantBuffer.h" />
     <ClInclude Include="Include\Engine\Graphics\Material\Material.h" />
@@ -137,6 +138,7 @@
     <ClInclude Include="Include\Engine\Graphics\Render\Renderer.h" />
     <ClInclude Include="Include\Engine\Graphics\Renderer\RenderDevice.h" />
     <ClInclude Include="Include\Engine\Graphics\Render\RenderQueue.h" />
+    <ClInclude Include="Include\Engine\Graphics\Render\RenderSortKey.h" />
     <ClInclude Include="Include\Engine\Graphics\Render\RenderSystem.h" />
     <ClInclude Include="Include\Engine\Graphics\Render\SpritePivot.h" />
     <ClInclude Include="Include\Engine\Graphics\Sampler\SamplerDesc.h" />
