--- a/Client/Client.vcxproj.filters
+++ b/Client/Client.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="Source\Client\ClientInit.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Source\Game\Levels\DemoLevelResources.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\ClientPCH\ClientPCH.cpp">
@@ -78,6 +81,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Source\Client\ClientInit.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Game\Levels\DemoLevelResources.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
