--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -110,6 +110,7 @@
     <ClInclude Include="Include\Engine\Core\World\CameraActor.h" />
     <ClInclude Include="Include\Engine\Core\World\GameplayLevel.h" />
     <ClInclude Include="Include\Engine\Core\World\Level.h" />
+    <ClInclude Include="Include\Engine\Core\World\LevelResourceSet.h" />
     <ClInclude Include="Include\Engine\Core\World\LevelTypes.h" />
     <ClInclude Include="Include\Engine\Core\World\PersistentLevel.h" />
     <ClInclude Include="Include\Engine\Core\World\UIActor.h" />
@@ -212,6 +213,9 @@
     <ClInclude Include="ThirdParty\DirectXTK\Src\SharedResourcePool.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Source\Engine\Core\World\GameplayLevel.cpp">
+      <PrecompiledHeaderOutputFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(IntDir)\EnginePCH.pch</PrecompiledHeaderOutputFile>
+    </ClCompile>
     <ClCompile Include="Source\Engine\Core\GameFramework\GameModeBase.cpp">
       <PrecompiledHeaderOutputFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(IntDir)\EnginePCH.pch</PrecompiledHeaderOutputFile>
     </ClCompile>
@@ -231,6 +235,9 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Source\Engine\Core\World\CameraActor.cpp">
+      <PrecompiledHeaderOutputFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(IntDir)\EnginePCH.pch</PrecompiledHeaderOutputFile>
+    </ClCompile>
+    <ClCompile Include="Source\Engine\Core\World\LevelResourceSet.cpp">
       <PrecompiledHeaderOutputFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(IntDir)\EnginePCH.pch</PrecompiledHeaderOutputFile>
     </ClCompile>
     <ClCompile Include="Source\Engine\Graphics\Buffer\ConstantBuffer.cpp">
