feat: UIActor에 UISpace 주입 로직 추가
- World가 현재 viewport 상태를 캐시하고 UIActor spawn 시 즉시 UISpace 주입
- viewport resize 시 PersistentLevel의 모든 UIActor에 UISpace 재전파
- Level에 Actor 순회용 ForEachActorInternal 유틸 추가
- PersistentLevel에서 Actor 순회 API 노출
- UI Screen-space projection을 World에서 일관되게 갱신

--- a/Client/Client.vcxproj
+++ b/Client/Client.vcxproj
@@ -157,7 +157,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClInclude>
     <ClInclude Include="Source\Game\Actors\DemoUIActor.h">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
     </ClInclude>
     <ClInclude Include="Source\ClientPCH\ClientPCH.h" />
     <ClInclude Include="Source\Game\GameModes\DemoGameMode.h" />
@@ -178,7 +178,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="Source\Game\Actors\DemoUIActor.cpp">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="Source\ClientPCH\ClientPCH.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
